--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
+    "axios": "^0.24.0",
     "craco": "^0.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
