--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "craco": "^0.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.1.0",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.18.2",
