--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,17 +8,14 @@ on:
     branches:
       - "*"
 
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 16
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          cache: 'npm'
-      - run: |
+        run: |
             npm i 
             npm run dev
             git config user.name github-actions
@@ -26,3 +23,4 @@ jobs:
             git add .
             git commit -m "[actions]: update Readme"
             git push
+
