--- a/.github/workflows/Repo-build.yaml
+++ b/.github/workflows/Repo-build.yaml
@@ -1,35 +1,23 @@
-name: Upload
-run-name: Create React App build.
+name: Pages Build
+run-name: Building new pages
 on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - "*"
-
 
 jobs:
-  build:
+  pages-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3.5.0
-        with:
-          node-version: 16
       - name: Use Node.js 16
         run: |
-            npm i 
-            npm run build
-            git config user.name github-actions
-            git config user.email github-actions@github.com
-            git checkout -B gh-pages
-            git add build
-            git commit -m "Build by Abhijith Ganesh🚀🚀🚀"
-            git push
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.0
-        with:
-          name: directory
-          path: ./build
-
+         npm i 
+         npm run build
+         git config user.name github-actions
+         git config user.email github-actions@github.com
+         git checkout -B gh-pages
+         git add build
+         git commit -m "Build by Abhijith Ganesh🚀🚀🚀"
+         git push
+    
+       
